--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -12,5 +12,5 @@ FROM mcr.microsoft.com/vscode/devcontainers/base:0-${VARIANT}
 RUN sudo apt update \
     && wget http://sdk-releases.upmem.com/2021.2.0/ubuntu_20.04/upmem_2021.2.0_amd64.deb \
     && sudo apt install -y ./upmem_2021.2.0_amd64.deb \
-    && sudo apt install -y pip \
-    && pip install pre-commit
+    && sudo apt install -y pip cmake ninja-build \
+    && pip install pre-commit scikit-build pybind11[global]
