--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -13,4 +13,5 @@ RUN sudo apt update \
     && wget http://sdk-releases.upmem.com/2021.2.0/ubuntu_20.04/upmem_2021.2.0_amd64.deb \
     && sudo apt install -y ./upmem_2021.2.0_amd64.deb \
     && sudo apt install -y pip cmake ninja-build \
+    && sudo apt full-upgrade -y \
     && pip install pre-commit scikit-build pybind11[global]
