--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,5 +31,5 @@
     // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
     "remoteUser": "vscode",
 
-    "postCreateCommand": "pre-commit install"
+    "postCreateCommand": "pre-commit install && python setup.py develop"
 }
