--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,7 @@
     // "postCreateCommand": "uname -a",
 
     // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-    "remoteUser": "vscode",
+    // "remoteUser": "vscode",
 
-    "postCreateCommand": "pre-commit install"
+    "postCreateCommand": "pre-commit install && python3 setup.py develop && rm -r _skbuild"
 }
