--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.15...3.19)
 
+# set(CMAKE_C_COMPILER "gcc") set(CMAKE_CXX_COMPILER "g++")
+
 project(dpu_trees VERSION "0.0.1")
 
 if(SKBUILD)
@@ -15,11 +17,22 @@ if(SKBUILD)
 endif()
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+# add_compile_options("`dpu-pkg-config --cflags --libs dpu`")
+# add_definitions("`dpu-pkg-config --cflags dpu`")
+# add_definitions("-I/usr/include/dpu")
 
 # Now we can find pybind11
 find_package(pybind11 CONFIG REQUIRED)
+# find_package(dpu CONFIG REQUIRED)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(DPU REQUIRED dpu)
 
-pybind11_add_module(_core MODULE src/main.cpp)
+pybind11_add_module(_core MODULE src/main.cpp src/trees.c)
+# target_include_directories(_core PRIVATE /usr/include/dpu)
+# target_link_libraries(_core PRIVATE dpu)
+target_link_libraries(_core PRIVATE ${DPU_LIBRARIES})
+target_include_directories(_core PRIVATE ${DPU_INCLUDE_DIRS})
+target_compile_options(_core PRIVATE ${DPU_CFLAGS_OTHER})
 
 target_compile_definitions(_core PRIVATE VERSION_INFO=${PROJECT_VERSION})
 
