--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -25,6 +25,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Download SDK
+        run: wget http://sdk-releases.upmem.com/2021.2.0/ubuntu_20.04/upmem_2021.2.0_amd64.deb
+
+      - name: Install SDK
+        run: apt install -y ./upmem_2021.2.0_amd64.deb
+
       - name: Get conda
         uses: conda-incubator/setup-miniconda@v2.1.1
         with:
