--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -25,6 +25,12 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Download SDK
+      run: wget http://sdk-releases.upmem.com/2021.2.0/ubuntu_20.04/upmem_2021.2.0_amd64.deb
+
+    - name: Install SDK
+      run: apt install -y ./upmem_2021.2.0_amd64.deb
+
     - name: Add requirements
       run: python -m pip install --upgrade wheel setuptools
 
