--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -53,6 +53,12 @@ jobs:
         # Python 2.7 on Windows with workaround not supported by scikit-build
         CIBW_SKIP: cp27-win*
 
+    - name: Download SDK
+      run: wget http://sdk-releases.upmem.com/2021.2.0/ubuntu_20.04/upmem_2021.2.0_amd64.deb
+
+    - name: Install SDK
+      run: apt install -y ./upmem_2021.2.0_amd64.deb
+
     - name: Verify clean directory
       run: git diff --exit-code
       shell: bash
