--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -54,6 +54,12 @@ jobs:
       with:
         submodules: true
 
+    - name: Download SDK
+      run: wget http://sdk-releases.upmem.com/2021.2.0/ubuntu_20.04/upmem_2021.2.0_amd64.deb
+
+    - name: Install SDK
+      run: sudo apt install -y ./upmem_2021.2.0_amd64.deb
+
     - uses: pypa/cibuildwheel@v2.1.3
       env:
         # Python 2.7 on Windows with workaround not supported by scikit-build
