--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ requires = [
     "pybind11>=2.7.1",
     "cmake>=3.21",
     "scikit-build>=0.12",
+    "ninja",
 ]
 
 build-backend = "setuptools.build_meta"
