changed directories structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,21 @@
 cmake_minimum_required(VERSION 3.15...3.19)
 
 # set(CMAKE_C_COMPILER "gcc") set(CMAKE_CXX_COMPILER "g++")
-
 project(dpu_trees VERSION "0.0.1")
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+# add_compile_options("`dpu-pkg-config --cflags --libs dpu`")
+# add_definitions("`dpu-pkg-config --cflags dpu`")
+# add_definitions("-I/usr/include/dpu")
+
+set(DPU_ROOT ${CMAKE_BINARY_DIR})
+
+# include(ExternalProject)
+
+# ExternalProject_Add(dpu_program PREFIX ${DPU_ROOT} SOURCE_DIR
+# ${DPU_ROOT}/src/dpu_program BUILD_IN_SOURCE 1 BUILD_COMMAND
+# dpu-upmem-dpurte-clang)
 
 if(SKBUILD)
   # Scikit-Build does not add your site-packages to the search path
@@ -16,13 +29,9 @@ if(SKBUILD)
   list(APPEND CMAKE_PREFIX_PATH "${_tmp_dir}")
 endif()
 
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-# add_compile_options("`dpu-pkg-config --cflags --libs dpu`")
-# add_definitions("`dpu-pkg-config --cflags dpu`")
-# add_definitions("-I/usr/include/dpu")
-
 # Now we can find pybind11
 find_package(pybind11 CONFIG REQUIRED)
+
 # find_package(dpu CONFIG REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(DPU REQUIRED dpu)
