full build and distribution system

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 # See here for image contents: https://github.com/microsoft/vscode-dev-containers/tree/v0.194.3/containers/ubuntu/.devcontainer/base.Dockerfile
 
 # [Choice] Ubuntu version: hirsute, bionic, focal
-ARG VARIANT="hirsute"
+ARG VARIANT="focal"
 FROM mcr.microsoft.com/vscode/devcontainers/base:0-${VARIANT}
 
 # [Optional] Uncomment this section to install additional OS packages.
@@ -14,4 +14,4 @@ RUN sudo apt update \
     && sudo apt install -y ./upmem_2021.2.0_amd64.deb \
     && sudo apt install -y pip cmake ninja-build \
     && sudo apt full-upgrade -y \
-    && pip install --upgrade nox pre-commit scikit-build pybind11[global]
+    && pip install --upgrade nox pre-commit scikit-build pybind11[global] importlib_resources
