--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,5 +29,5 @@
     // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
     // "remoteUser": "vscode",
 
-    "postCreateCommand": "pre-commit install && python3 setup.py develop && rm -r _skbuild"
+    "postCreateCommand": "pre-commit install && python3 setup.py develop && python3 setup.py clean"
 }
