--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -8,8 +8,8 @@ on:
       - master
 
 jobs:
-  build:
-    name: Build with Pip
+  build-deb:
+    name: Build with Pip (Debian package)
     strategy:
       fail-fast: false
       matrix:
@@ -31,8 +31,34 @@ jobs:
     - name: Install SDK
       run: sudo apt install -y ./upmem_2021.2.0_amd64.deb
 
-    - name: Add requirements
-      run: python -m pip install --upgrade wheel setuptools
+    - name: Build and install
+      run: pip install --verbose .[test]
+
+    - name: Test
+      run: pytest
+
+  build-src:
+    name: Build with Pip (Source install)
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: [ubuntu-latest]
+        python-version: ["3.6", "3.8", "3.9", "3.10-dev"]
+
+    runs-on: ${{ matrix.platform }}
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Download SDK
+      run: wget http://sdk-releases.upmem.com/2021.2.0/ubuntu_20.04/upmem-2021.2.0-Linux-x86_64.tar.gz
+
+    - name: Install SDK
+      run: tar -zxvf upmem-2021.2.0-Linux-x86_64.tar.gz && source upmem-2021.2.0-Linux-x86_64/upmem_env.sh
 
     - name: Build and install
       run: pip install --verbose .[test]
