investigating missing pkg-config

--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -60,6 +60,9 @@ jobs:
     - name: Install SDK
       run: tar -zxvf upmem-2021.2.0-Linux-x86_64.tar.gz && source upmem-2021.2.0-Linux-x86_64/upmem_env.sh
 
+    - name: checking pkg-config installation
+      run: echo $UPMEM_HOME && which dpu-pkg-config
+
     - name: Build and install
       run: pip install --verbose .[test]
 
