--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,10 @@
 [metadata]
-description_file = README.md
+name = dpu_trees
+description = A package for the k-means algorithm on DPU.
+long_description = file: README.md
+long_description_content_type = text/markdown
+license = MIT
 license_file = LICENSE
+url = https://github.com/SylvanBrocard/dpu_trees
+author = Sylvan Brocard
+author_email = sylvan.brocard@gmail.com
